@@ -26,7 +26,7 @@
  
 */
 
-#include "config.h"
+#include <config.h>
 
 #include <pthread.h>
 #include <string.h>
